fix textAlign result

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,14 @@
   height: 100%;
   text-align: center;
 }
-
+.result {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  gap: 20px;
+}
 .result__text,
 #btn-copy {
   display: none;
